work on getting the tests to pass, bugfixes

--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -23,7 +23,7 @@
 <div class="testimonial style_1">
 	<div class="quote">Too easy. Is this for real?!</div>
 	<div class="person">-Amanda A.</div>
-	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div>
+{# 	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div> #}
 </div>
 
 
