--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -15,11 +15,11 @@
 		<span class="edit_mode_on">
 			<div class="sentence">
 			<span class="sentence_fragment">Add</span>
-			<span class="duration">{{form.duration}}</span> 
+			<span class="duration">{{new_shift_form.duration}}</span> 
 			<span class="sentence_fragment">hours on</span>
-			<span class="date">{{form.date}}</span> 
+			<span class="date">{{new_shift_form.date}}</span> 
 			<span class="sentence_fragment">for</span>
-			<span class="shift">{{form.shift}}</span>
+			<span class="shift">{{new_shift_form.shift}}</span>
 			<span class="sentence_fragment">. </span>
 			</div>
 			</span>
