--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -103,7 +103,8 @@ $(function(){
 </detail_tabs>
 <detail_tab_contents>
 	<fragment name="detail_tab" action="replace" class="detail_tab">
-		{% include "recent_activity/_people_recent_activity_tab.html" %}
+		{# {% include "recent_activity/_people_recent_activity_tab.html" %} #}
+		{% include "volunteers/_people_volunteer_tab.html" %}
 	</fragment>
 </detail_tab_contents>
 <delete_object_block>
