more fixes, test for top search

--- a/mycelium/apps/groups/templates/groups/_search_results.html
+++ b/mycelium/apps/groups/templates/groups/_search_results.html
@@ -14,9 +14,9 @@
 {% else %}
 <div class="no_people_found">
 {% if q %}
-	No people found for search "{{q}}".
+	No groups found for search "{{q}}".
 {% else %}
-	No search.
+	No search!
 {% endif %}
 	
 </div>
