--- a/mycelium/apps/groups/templates/groups/_search_result_row_group.html
+++ b/mycelium/apps/groups/templates/groups/_search_result_row_group.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-<tr class="result_row person_row striped_row organization_row">
+<tr class="result_row person_row striped_row group_row">
 	<td class="col_0 name ">
 		<a href="{% url groups:group obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
