all tests except the ones that that test features that aren't written yet are passing.

--- a/mycelium/apps/import/templates/import/list.html
+++ b/mycelium/apps/import/templates/import/list.html
@@ -8,6 +8,7 @@
 {% endblock %}
 {% block breadcrumb %}{% endblock %}
 {% block page_content %}
+<coming_soon>We're not quite done with data import yet, but it'll be ready to go by June 1!</coming_soon>
 <page_title>Data Import History</page_title>
 
 <record_list>
