--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -885,3 +885,11 @@ tabbed_box box_content {
 	background-color: #FAFAFA;
 	width: 100%;
 }
+coming_soon {
+	display: block;
+	width: 100%;
+	padding: 30px 0px 50px 0px;
+	text-align: center;
+	color: #999;
+	font-size: 24px;
+}
