env, and simplifying 500 template

--- a/mycelium/templates/404.html
+++ b/mycelium/templates/404.html
@@ -23,7 +23,7 @@
 	Some useful places to go from here:
 	<ul>
 	<li><a href="javascript:window.history.go(-1);">Back to the last page you were on</a></li>
-	<li><a href="{% url marketing_site:home %}">GoodCloud Home</a></li>
+	<li><a href="https://www.agoodcloud.com">GoodCloud Home</a></li>
 	</ul>
 	</div>
 	</div>
