--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -36,7 +36,7 @@ Nonprofits told us that looking up a phone number, email or address is something
 	
 	<div class="feature volunteer">
 		<div class="title">Track volunteer hours</div>
-		<div class="description identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer shifts, automatically doing the math for you.</div>
+		<div class="description identical_height_block">The year-end volunteer hours report just turned into one click. GoodCloud quickly and easily lets you log volunteer hours, automatically doing the math for you.</div>
 	</div>
 	</div>
 
