--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -1,6 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
 {% block title %}GoodCloud - About us: who we are, why we're here.{% endblock %}
+{% block extra_body %}class="about_us"{% endblock %}
 {% block css %}
 {% css "/css/mycelium_elements.css" %}
 {{block.super}}
@@ -12,7 +13,7 @@
 {% endblock %}
 
 {% block page_content %}
-<div class="page_header">About Us</div>
+<div class="page_header about_us">Do Good Things.</div>
 
 <div id="side_nav" class="tabs">
 	<ul class="nav_links">
