--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -46,32 +46,40 @@
 {% if not request.account.has_completed_all_challenges %}
 	<td class="full_col">
 		<column_header>GoodCloud Challenges</column_header>
-		<div class="challenge_description plain_text" >Complete the six GoodCloud Challenges and receive a 50% discount on your first month of use. What's that you say? Half off just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really believe GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
+		<div class="challenge_description plain_text" >Complete the GoodCloud Challenges and receive a 50% discount on your first month of use. What's that you say? Half off just for setting things up and doing a quick tour? Are we crazy? Well, yes. But we really believe GoodCloud is the best solution out there for small nonprofits, and we're ready to prove it.</div>
 
 		<challenge class="{% if request.account.challenge_has_imported_contacts %}complete{% endif %}">
 			<title_text>Import your contacts.</title_text>
-			<description class="plain_text">Got a system or spreadsheet that you currently keep your contacts in?  Get that contact list to an Excel or .csv file and let's import that thing to get you rolling! {% if not request.account.challenge_has_imported_contacts %}<a href="#">Get Started!</a>{% endif %}</description>
+			<description class="plain_text">Got a system or spreadsheet that you currently keep your contacts in?  Get that contact list to an Excel or .csv file and let's import that thing to get you rolling! <a href="#" class="get_started_link">Get Started!</a></description>
 		</challenge>
-		<challenge class="{% if request.account.challenge_has_set_up_tags %}complete{% endif %}">
-			<title_text>Set up your tags.</title_text>
-			<description class="plain_text">Create the tags that make the most sense for the way you categorize your volunteers, donors, and mission-based contacts.  {% if not request.account.challenge_has_set_up_tags %}<a href="#">Get Started!</a>{% endif %}</description>
+		<challenge class="{% if request.account.challenge_has_logged_volunteer_hours %}complete{% endif %}">
+			<title_text>Track volunteer hours.</title_text>
+			<description class="plain_text">Got a spreadsheet with all your volunteers' hours?  If so, import that baby in.  If not, go ahead and log the hours of the last person that volunteered for your organization. <a href="#" class="get_started_link">Get Started!</a></description>
+		</challenge>
+		<challenge class="{% if request.account.challenge_has_added_a_donation %}complete{% endif %}">
+			<title_text>Add your donations.</title_text>
+			<description class="plain_text">If you have a spreadsheet with all of this year's donations, let's import that!  If not, input the last donation that your organization handled.  Just go to that contact, find the donation tab, and add away. <a href="#" class="get_started_link">Get Started!</a></description>
 		</challenge>
 		<challenge class="{% if request.account.challenge_has_added_board %}complete{% endif %}">
 			<title_text>Add your board.</title_text>
-			<description class="plain_text">Make a tag for Board Members.  Then, tag each of your board members.  Finally, make a new group for everyone who has a Board Members tag. {% if not request.account.challenge_has_added_board %}<a href="#">Get Started!</a>{% endif %}</description>
-		</challenge>
-		<challenge class="{% if request.account.challenge_has_created_other_accounts %}complete{% endif %}">
-			<title_text>Share the love - Get everyone else onboard!</title_text>
-			<description class="plain_text">Make an account for other staff members. If you're the only staff member, send us a note, and we'll check this one off for you. {% if not request.account.challenge_has_created_other_accounts %}<a href="#">Get Started!</a>{% endif %}</description>
+			<description class="plain_text">Make a tag for Board Members.  Then, tag each of your board members.  Finally, make a new group for everyone who has a Board Members tag. <a href="#" class="get_started_link">Get Started!</a></description>
+		</challenge>		
+		<challenge class="{% if request.account.challenge_has_set_up_tags %}complete{% endif %}">
+			<title_text>Set up your tags.</title_text>
+			<description class="plain_text">Create the tags that make the most sense for the way you categorize your volunteers, donors, and mission-based contacts.  <a href="#" class="get_started_link">Get Started!</a></description>
 		</challenge>
 		<challenge class="{% if request.account.challenge_has_downloaded_spreadsheet %}complete{% endif %}">
 			<title_text>Download a spreadsheet.</title_text>
-			<description class="plain_text">Have your spreadsheet include all your board members with their first and last names, email addresses, and phone numbers. {% if not request.account.challenge_has_downloaded_spreadsheet %}<a href="#">Get Started!</a>{% endif %}</description>
+			<description class="plain_text">Have your spreadsheet include all your board members with their first and last names, email addresses, and phone numbers. <a href="#" class="get_started_link">Get Started!</a></description>
 		</challenge>
-		<challenge class="{% if request.account.challenge_has_submitted_support %}complete{% endif %}">
-			<title_text>Say Hello!</title_text>
-			<description class="plain_text">We get to know our clients and want to make sure that using GoodCloud is easy like Sunday morning for you.  Click that blue “Feedback &amp; Support” button in the corner, and submit a message with any questions you have, more info about you and your organization, or just a hello! {% if not request.account.challenge_has_submitted_support %}<a href="#">Get Started!</a>{% endif %}</description>
+		<challenge class="{% if request.account.challenge_has_created_other_accounts %}complete{% endif %}">
+			<title_text>Share the love - Get everyone else onboard!</title_text>
+			<description class="plain_text">Make an account for other staff members. If you're the only staff member, send us a note, and we'll check this one off for you. <a href="#" class="get_started_link">Get Started!</a></description>
 		</challenge>
+{# 		<challenge class="{% if request.account.challenge_has_submitted_support %}complete{% endif %}"> #}
+{# 			<title_text>Say Hello!</title_text> #}
+{# 			<description class="plain_text">We get to know our clients and want to make sure that using GoodCloud is easy like Sunday morning for you.  Click that blue “Feedback &amp; Support” button in the corner, and submit a message with any questions you have, more info about you and your organization, or just a hello! <a href="#" class="get_started_link">Get Started!</a></description> #}
+{# 		</challenge> #}
 
 	</td>
 {% else %}
