started the icon for orgs, then decided it was silly

--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -28,7 +28,7 @@ $(function(){
 {% endwith %}
 
 
-<div class="basic_info">
+<div class="basic_info organization">
 	<div class="name_phone_email">
 		<div class="name">
 			{% generic_editable_field form.name %}
