--- a/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
+++ b/mycelium/apps/volunteers/templates/volunteers/_people_volunteer_tab.html
@@ -3,11 +3,11 @@
 <table class="two_column_70_30">
 <tr>
 <td class="column_1">
-	<div class="detail_header">Volunteer Shifts</div>
+	<div class="detail_header">Volunteer Hours</div>
 	<tabbed_box class="with_button closed" name="add_a_volunteer_shift">
 		<tab_title_container>	
 		<tab_title>
-			<text>Add a Volunteer Shift</text>
+			<text>Add a Volunteer Hours</text>
 		</tab_title>
 		</tab_title_container>
 		<box_content>
@@ -18,14 +18,14 @@
 			<span class="duration">{{new_shift_form.duration}}</span> 
 			<span class="sentence_fragment">hours on</span>
 			<span class="date">{{new_shift_form.date}}</span> 
-			<span class="sentence_fragment">for</span>
-			<span class="shift">{{new_shift_form.shift}}</span>
+{# 			<span class="sentence_fragment">for</span> #}
+{# 			<span class="shift">{{new_shift_form.shift}}</span> #}
 			<span class="sentence_fragment">. </span>
 			</div>
 			</span>
 			
 			<form_actions>
-				<input type="submit" class="mycelium_btn add_shift_btn" value="Add Shift">
+				<input type="submit" class="mycelium_btn add_shift_btn" value="Add Hours">
 			</form_actions>
 			<box_close>
 				<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
