new backup info, test fixing

--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -11,7 +11,7 @@
 
 <script src="{% url rules:rules_logic_js %}"></script>
 {% js "/js/mycelium/rules.js" %}
-{% if request.GET.edit == "ON" or form.instance.full_name == "No Name"  %}
+{% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Group"  %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
     $("#basic_info_form").genericFieldForm('toggle_edit');
