--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -9,7 +9,7 @@
 {% js "/js/mycelium/people_common.js"%}
 {% js "/js/mycelium/people_organization.js"%}
 {% generic_tags_js %}
-{% if request.GET.edit == "ON" or form.instance.full_name == "No Name" %}
+{% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Organization" %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
     $("#basic_info_form").genericFieldForm('toggle_edit');
