--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -16,7 +16,7 @@
 {% js "/js/mycelium/people_common.js" %}
 {% js "/js/mycelium/people_person.js" %}
 {% generic_tags_js %}
-{% if request.GET.edit == "ON" or form.instance.full_name == "No Name"  %}
+{% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Person"  %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
     $("#basic_info_form").genericFieldForm('toggle_edit');
