fixing praise quote, adding st gerard house

--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -23,7 +23,7 @@
 <div class="testimonial style_1">
 	<div class="quote">Too easy. Is this for real?!</div>
 	<div class="person">-Amanda A.</div>
-{# 	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div> #}
+ 	<div class="organization"><a href="http://stgerardhouse.com/" target="_blank">St. Gerard House</a></div> 
 </div>
 
 
@@ -32,7 +32,7 @@
 <div class="testimonial style_2">
 	<div class="quote">Extremely easy to understand. Extremely quick. Extremely flexible.</div>
 	<div class="person">-Nathaniel H.</div>
-	<div class="organization"><a href="http://congoleadershipinitiative.wordpress.com/" target="_blank">Congo Leadership Initiative</a></div>
+	<div class="organization"><a href="http://congoleaders.org/" target="_blank">Congo Leadership Initiative</a></div>
 </div>
 
 
