--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -4,27 +4,10 @@
 {% css "/css/contrib/jquery-ui-1.8.10.custom.css" %}
 {% endblock %}
 {% block javascript %}{{block.super}}
-{# {% if ENV == "DEV" %} #}
-	{% js "/js/contrib/jquery.scrollTo-min.js" %}
-	{% js "/js/contrib/jquery.toggleval.js" %}
-	{% js "/js/contrib/jquery.hotkeys-0.7.9.min.js" %}
-	{% js "/js/contrib/jquery.ajax.queue.js" %}
-	{% js "/js/contrib/jquery.autogrow.js" %}
-	{% js "/js/contrib/jquery.form.js" %}
-	{% js "/js/contrib/jquery.ba-bbq.min.js" %}
-	{% js "/js/contrib/jquery.formset.min.js" %}
-	{% js "/js/contrib/autocolumn.min.js" %}
-	{% js "/js/mycelium/mycelium_elements.js" %}
-	{% js "/js/mycelium/generic_fields.js" %}
-	{% js "/js/mycelium/mycelium_search.js" %}
-	{% js "/js/mycelium/mycelium_top_search.js" %}
-
+	{% js "mycelium_base_all.js" %}
 <script>
 var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 </script>
-{# {% else %} #}
-{# 	{% js "/js/mycelium/mycelium_base_all.js" %} #}
-{# {% endif %} #}
 {% endblock %}
 {% block content %}
 	{% block nav %}
