joined all the marketing files

--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -1,24 +1,16 @@
 {% extends "base.html" %}
 {% block css %}{{block.super}}
-{% css "/css/contrib/jquery-ui-1.8.10.custom.css" %}
-{% css "/css/marketing_site.css" %}
-
+{% css "marketing_base.css" %}
 {# 1140 #}
-<!--[if lte IE 9]>{% css "/css/contrib/1140/ie.css" %}<![endif]-->
-{% css "/css/contrib/1140/1140.css" %}
-<!--[if !IE 9]>
-	<style type="text/css">
-		#footer {display:block; position: relative;}
-	</style>
+<!--[if lte IE 9]>{% css "/css/contrib/1140/ie.css" %}
+<style type="text/css">
+	#footer {display:block; position: relative;}
+</style>
 <![endif]-->
 {% endblock %}
-{% block javascript %}{{block.super}}
-{% js "/js/contrib/jquery.autogrow.js" %}
-{% js "/js/contrib/jquery.ba-bbq.min.js" %}
-{# {% js "/js/contrib/css3-mediaqueries.js" %} #}
-{% js "/js/contrib/preloadCssImages.jQuery_v5.js"	%}
-{% js "/js/mycelium/marketing_site.js"	%}
-
+{% block javascript %}
+{% js "marketing_base.js" %}
+{{block.super}}
 {% endblock %}
 {% block content %}
 	{% include "marketing_site/_top_nav.html" %}
