changed some leading slashes, let's see what we get.

--- a/mycelium/apps/accounts/templates/accounts/base_login.html
+++ b/mycelium/apps/accounts/templates/accounts/base_login.html
@@ -1,7 +1,7 @@
 {% extends "mycelium_base.html" %}
 {% block title %}Log in to GoodCloud{% endblock %}
 {% block head %}{{block.super}}
-{% css "/css/login.css" %}
+{% css "css/login.css" %}
 {% endblock %}
 
 {% block nav %}{% endblock %}
