--- a/mycelium/apps/people/templates/people/organization.html
+++ b/mycelium/apps/people/templates/people/organization.html
@@ -11,7 +11,7 @@
 {% generic_tags_js %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Organization" %}
 <script type="text/javascript" charset="utf-8">
-$(function(){
+(function($){
     $("#basic_info_form").genericFieldForm('toggle_edit');
 	$("#id_name").focus();
 });
