--- a/mycelium/apps/people/templates/people/person.html
+++ b/mycelium/apps/people/templates/people/person.html
@@ -18,7 +18,7 @@
 {% generic_tags_js %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "Unnamed Person"  %}
 <script type="text/javascript" charset="utf-8">
-$(function(){
+(function($){
     $("#basic_info_form").genericFieldForm('toggle_edit');
 	$("#id_first_name").focus();
 });
