--- a/mycelium/apps/rewrite/templates/rewrite/demo4.html
+++ b/mycelium/apps/rewrite/templates/rewrite/demo4.html
@@ -3,9 +3,9 @@
 	<script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js">	</script>
 	<script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js">	</script>
 <script type="text/javascript" charset="utf-8">
-(function($){
+$(function(){
 	var editing_nodes = [];
-	(function($){
+	$(function(){
 		$("#editor .edit_link").show();
 		$("#editor .save_links").hide();
 		$("#start_editing").click(function(){
