--- a/mycelium/apps/rewrite/templates/rewrite/demo3.html
+++ b/mycelium/apps/rewrite/templates/rewrite/demo3.html
@@ -4,8 +4,8 @@
 	<script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js">	</script>
 <script type="text/javascript" charset="utf-8">
 	var editing_nodes = [];
-(function($){
-	(function($){
+$(function(){
+	$(function(){
 		// new nicEditor({fullPanel : true}).panelInstance("body_node",{hasPanel : true});		
 		// $("#editor .edit_link").show();
 		// $("#editor .save_links").hide();
