--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block css %}{{block.super}}
-	{% css "mycelium_base.css" %}
+	{% css "css/mycelium_base.css" %}
 {% endblock %}
+{% block base_js %}{% js "js/mycelium_base.js" %}{% endblock %}
 {% block javascript %}{{block.super}}
-	{% js "mycelium_base.js" %}
+	{% js "js/mycelium/mycelium_elements.js" %}	
+	{% js "js/mycelium_core.js" %}
 <script>
 var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 </script>
