--- a/mycelium/apps/marketing_site/templates/marketing_site/base.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/base.html
@@ -10,6 +10,7 @@
 {% endblock %}
 {% block base_js %}{% js "js/marketing_base.js" %}{% endblock %}
 {% block javascript %}{{block.super}}
+{% js "js/libs/preloadCssImages.jQuery.mycelium.js" %}
 {% js "js/marketing_core.js" %}
 {% endblock %}
 {% block content %}
