file type limits on upload

--- a/mycelium/apps/import/templates/import/start.html
+++ b/mycelium/apps/import/templates/import/start.html
@@ -21,6 +21,7 @@
 	    action: "{% url import:ajax_upload %}",
 	    element: $('#file-uploader')[0],
 	    multiple: true,
+	    allowedExtensions: ["csv","xls","xlsx"],
 	    onComplete: function( id, fileName, responseJSON ) {
 	      if( responseJSON.success )
 	        alert( "success!" ) ;
