--- a/mycelium/apps/data_import/templates/import/review.html
+++ b/mycelium/apps/data_import/templates/import/review.html
@@ -6,7 +6,7 @@
 
 </script>
 {% endblock %}
-{% block breadcrumb_links %}<a href="{% url import:list %}">Back to All Data Imports</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url data_import:list %}">Back to All Data Imports</a>{% endblock %}
 {% block page_content %}
 <page_title>Data Import #5 on Dec 29, 2010 at 3:55pm</page_title>
 <div class="report_summary">
