--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -35,7 +35,7 @@
 	</div>
 	{% endif %}
 	<div class="more_row">
-	<a href="{% url import:list %}" class="mycelium_btn more_button data_import_btn">
+	<a href="{% url data_import:list %}" class="mycelium_btn more_button data_import_btn">
 		<div class="button_title">Data Import</div>
 		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
