--- a/mycelium/apps/data_import/templates/import/start.html
+++ b/mycelium/apps/data_import/templates/import/start.html
@@ -18,7 +18,7 @@
 	}
 
 	var uploader = new qq.FileUploader( {
-	    action: "{% url import:ajax_upload %}",
+	    action: "{% url data_import:ajax_upload %}",
 	    element: $('#file-uploader')[0],
 	    multiple: true,
 	    allowedExtensions: ["csv","xls","xlsx"],
@@ -43,7 +43,7 @@
 
 </script>
 {% endblock %}
-{% block breadcrumb_links %}<a href="{% url import:list %}">Back to All Data Imports</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url data_import:list %}">Back to All Data Imports</a>{% endblock %}
 {% block page_content %}
 <coming_soon>We're not quite done with data import yet, but it'll be ready to go by June 1!</coming_soon>
 <page_title>Start Data Import</page_title>
@@ -99,7 +99,7 @@
 	<step_number>3</step_number>
 	<instruction>Click Import, and give the GoodCloud robots a minute!</instruction>
 	<step_content>	
-	<a href="{% url import:list %}" class="mycelium_btn mycelium_grey">Start Import</a>
+	<a href="{% url data_import:list %}" class="mycelium_btn mycelium_grey">Start Import</a>
 	</step_content>
 	</active_step_content>
 </step>
