csv and excel uploads and reads are working!

--- a/mycelium/apps/data_import/templates/import/start.html
+++ b/mycelium/apps/data_import/templates/import/start.html
@@ -53,7 +53,7 @@
 	<step_number>1</step_number>
 	<instruction>Choose a spreadsheet. (Excel and .CSV files are both fine.)</instruction>
 	<step_content>	
-	<form class="upload_form">
+	<form class="upload_form" enctype="multipart/form-data">
 		<div id="file-uploader">       
 		    <noscript>          
 		        <p>Please enable JavaScript to use file uploader.</p>
