--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -31,7 +31,7 @@
 {% analytical_body_bottom %}
 {% block javascript %}
 <!--[if lt IE 7 ]>
-  {% js "js/libs/dd_belatedpng.js" %}
+  {% js "js/lib/dd_belatedpng.js" %}
   <script>DD_belatedPNG.fix('img, .png_bg');</script>
 <![endif]-->
 {% endblock %}
