--- a/media/css/contrib/fileuploader.css
+++ b/media/css/contrib/fileuploader.css
@@ -1,24 +1,24 @@
-.qq-uploader { position:relative; width: 100%;}
+.qq-uploader { position:relative; width: 100%; height: 60px;}
 
 .qq-upload-button {
-    display:block; /* or inline-block */
-    width: 105px; padding: 7px 0; text-align:center;    
-    background:#880000; border-bottom:1px solid #ddd;color:#fff;
+    display:inline-block; 
+    width: 95px;
+    text-align: center;
 }
+
 .qq-upload-button-hover {background:#cc0000;}
 .qq-upload-button-focus {outline:1px dotted black;}
 
 .qq-upload-drop-area {
     position:absolute; top:0; left:0; width:100%; height:100%; min-height: 70px; z-index:2;
-    background:#FF9797; text-align:center; 
+    background:#EEE; text-align:center; 
+    margin-bottom: 20px;
 }
 .qq-upload-drop-area span {
     display:block; position:absolute; top: 50%; width:100%; margin-top:-8px; font-size:16px;
 }
-.qq-upload-drop-area-active {background:#FF7171;}
+.qq-upload-drop-area-active {background:#DDD;}
 
-.qq-upload-list {margin:15px 35px; padding:0; list-style:disc;}
-.qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
 .qq-upload-file, .qq-upload-spinner, .qq-upload-size, .qq-upload-cancel, .qq-upload-failed-text {
     margin-right: 7px;
 }
@@ -29,3 +29,17 @@
 
 .qq-upload-failed-text {display:none;}
 .qq-upload-fail .qq-upload-failed-text {display:inline;}
+
+.qq-upload-success  {
+	font-size: 18px;
+	background: url("../../images/icon-check-16.png") no-repeat 0px 4px;
+	padding-left: 20px;
+	display: block;
+
+}
+.qq-upload-list {
+	float: left;
+	font-size: 18px;
+	list-style: none;
+	padding: 6px 20px 0px 0px;
+}
