--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -6,8 +6,8 @@
 <div class="page_header">Watch it in action</div>
 
 <div class="tour_video">
-{# <iframe src="http://player.vimeo.com/video/VIDEO_ID" width="WIDTH" height="HEIGHT" frameborder="0"></iframe> #}
-<iframe width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe class="video_box" src="http://player.vimeo.com/video/23807297?title=0&amp;byline=0&amp;portrait=0" width="640" height="360" frameborder="0"></iframe>
+{# <iframe class="video_box" width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe> #}
 {# <img src="{% media_url "images/video-coming-soon.png" %}"/> #}
 </div>
 
